# constraint-solver

./: .gitignore  Cargo.toml  build_web.sh  rustfmt.toml
examples/diagram/: Cargo.toml
examples/diagram-box-only/: Cargo.toml
examples/diagram-box-only/src/: main.rs
examples/diagram/benches/: geom_benchmark.rs  primitives_benchmark.rs
examples/diagram/src/: geom.rs  geometry.rs  lib.rs  main.rs  primitives.rs
examples/diagramlayout/: Cargo.toml
examples/employee-scheduling/: Cargo.toml
examples/employee-scheduling/src/: lib.rs  main.rs
examples/graphcoloring/: Cargo.toml
examples/knapsack/: Cargo.toml
examples/nqueens/: Cargo.toml
examples/nqueens/src/: lib.rs  main.rs
examples/nurserostering/: Cargo.toml
local-search/: Cargo.toml
local-search/examples/: local-search-n-queens.rs
local-search/src/: ackley.rs  iterated_local_search.rs  lib.rs  local_search.rs
math-util/: Cargo.toml
math-util/src/: ackley.rs  lib.rs
web/employee-scheduling/: .browserslistrc  package-lock.json  package.json  webpack.common.js
web/employee-scheduling-wasm-bindgen/: Cargo.toml
web/employee-scheduling-wasm-bindgen/src/: lib.rs
web/employee-scheduling/src/: employee_scheduling.ts  index.html  index.ts  worker.ts
