[workspace]

members = [
    "examples/diagram",
    "examples/employee-scheduling",
    "examples/nqueens",
    "local-search",
    "math-util",
    "web/employee-scheduling-wasm-bindgen",
]

[profile.release]
incremental = true
lto = false
opt-level = 3
overflow-checks = false
debug = true

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
incremental = false
debug = false
