[package]
name = "local-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.9.2"
clap = "2.33.3"
derivative = "2.2.0"
linked_hash_set = "0.1.4"
rand = "0.8.4"
rand_chacha = "0.3.1"
rand_pcg = "0.3.1"
