[package]
name = "local-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
approx = "0.5.0"

[dependencies]
approx = "0.5.0"
blake2 = "0.10.0"
clap = "2.34.0"
derivative = "2.2.0"
float-ord = "0.3.2"
hashlink = "0.7.0"
math-util = { path = "../math-util" }
num = "0.4.0"
num-traits = "0.2.14"
rand = "0.8.4"
rand_chacha = "0.3.1"
rand_distr = "0.4.2"
