[package]
name = "local-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
approx = "0.5.1"

[dependencies]
approx = "0.5.1"
blake2 = "0.10.4"
clap = "3.1.12"
derivative = "2.2.0"
hashlink = "0.8.0"
math-util = { path = "../math-util" }
num = "0.4.0"
num-traits = "0.2.14"
ordered-float = "2.10.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.137"
