[package]
name = "math-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
approx = "0.5.1"
rand = "0.8.5"

[dependencies]
half = "1.8.2"
num = "0.4.0"
num-traits = "0.2.14"
ordered-float = "2.10.0"
