[package]
name = "diagram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.9.2"
clap = "2.33.3"
derivative = "2.2.0"
euclid = "0.22.6"
local-search = { path = "../../local-search" }
rand = "0.8.4"
rand_chacha = "0.3.1"
