[package]
name = "diagram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "geom_benchmark"
harness = false

[dev-dependencies]
criterion = "0.3.5"
proptest = "1.0.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[dependencies]
approx = "0.5.1"
az = "1.2.0"
blake2 = "0.10.4"
clap = "3.1.12"
derivative = "2.2.0"
fasthash = "0.4.0"
fixed = { version = "1.14.0", features = ["arbitrary", "num-traits"] }
geo = "0.20.1"
itertools = "0.10.3"
local-search = { path = "../../local-search" }
num = "0.4.0"
num-traits = "0.2.14"
ordered-float = "2.10.0"
proptest = "1.0.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
resvg = "0.22.0"
rstar = "0.9.3"
rust_decimal = "1.23.1"
seahash = "4.1.0"
tiny-skia = "0.6.3"
usvg = "0.22.0"
