[package]
name = "employee-scheduling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.4"
clap = "3.1.12"
derivative = "2.2.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
local-search = { path = "../../local-search" }
chrono = "0.4.19"
ordered-float = "2.10.0"
itertools = "0.10.3"
